0.07
 - Add tests.
 - Update copyright years.

0.06 2024-02-13T08:06:38+01:00
 - Add tests.
 - Fix dependencies.
 - Move constant texts to module for English.

0.05 2024-02-11T23:39:10+01:00
 - Add 'raw' parameter.
 - Add tests.

0.04 2024-01-12T09:38:37+01:00
 - Add test with real data.
 - Improve doc of Data::MARC::Leader.
 - Update copyright years.

0.03 2023-11-20T14:39:39+01:00
 - Change API: Rename char_encoding_scheme() to char_coding_scheme().

0.02 2023-11-19T14:19:59+01:00
 - Add Utils::desc_type_of_control().

0.01 2023-11-18T00:56:36+01:00
 - First version.