@@ -14,6 +14,7 @@ inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 Leader.pm
 Leader/Utils.pm
+Leader/Utils/CES.pm
 Leader/Utils/ENG.pm
 LICENSE
 Makefile.PL
@@ -21,6 +22,8 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
+t/Data-MARC-Leader-Utils-CES/01-use.t
+t/Data-MARC-Leader-Utils-CES/02-version.t
 t/Data-MARC-Leader-Utils-ENG/01-use.t
 t/Data-MARC-Leader-Utils-ENG/02-version.t
 t/Data-MARC-Leader-Utils/01-use.t
@@ -32,6 +35,8 @@ t/Data-MARC-Leader-Utils/06-desc_descriptive_cataloging_form.t
 t/Data-MARC-Leader/01-use.t
 t/Data-MARC-Leader/02-version.t
 t/Data-MARC-Leader/03-new.t
+xt/Data-MARC-Leader-Utils-CES/01-pod_coverage.t
+xt/Data-MARC-Leader-Utils-CES/02-pod.t
 xt/Data-MARC-Leader-Utils-ENG/01-pod_coverage.t
 xt/Data-MARC-Leader-Utils-ENG/02-pod.t
 xt/Data-MARC-Leader-Utils/01-pod_coverage.t
