@@ -1,4 +1,5 @@
 0.07
+ - Add Czech translation.
  - Add tests.
  - Update copyright years.
 
